[package]
name = "causality-engine"
version = "0.1.0"
edition = "2021"
description = "Causality - Execution engine"
license = "MIT OR Apache-2.0"

[dependencies]
# External dependencies
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

# Internal dependencies
causality-types = { workspace = true }
causality-core = { workspace = true }
causality-resource = { workspace = true }
causality-effects = { workspace = true }
causality-storage = { workspace = true }
