[package]
name = "causality-engine"
version = "0.1.0"
edition = "2021"
authors = ["Causality Team <info@causality.dev>"]
description = "Execution engine for the Causality platform"
license = "Apache-2.0"

[dependencies]
# Causality dependencies
causality-types = { path = "../causality-types" }
causality-crypto = { path = "../causality-crypto" }
causality-error = { path = "../causality-error" }
causality-core = { path = "../causality-core" }

# External dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = { workspace = true }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
bincode = "1.3"
base64 = "0.13"
reqwest = { workspace = true, features = ["json"] }
sha2 = "0.10"
futures = "0.3"
flate2 = "1.0"
blake3 = "1.3"
borsh = "0.10"
ciborium = "0.2"
uuid = { version = "1.3", features = ["v4"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tempfile = "3.5.0"

[features]
default = []
md5 = []
domain = []
code-repo = []
# Enable this feature for browser/wasm compatibility
wasm = ["getrandom/js"]

# DEPRECATED: Dependencies on legacy crates have been removed
# All functionality is now available through causality-core
# causality-resource = { workspace = true }
# causality-effects = { workspace = true }
