[package]
name = "causality-ffi"
version = "0.1.0"
edition = "2021"
description = "Unified FFI bindings for C and OCaml integration with Causality framework"

[lib]
name = "causality_ffi"
crate-type = ["cdylib", "rlib"]

[dependencies]
causality-core = { path = "../causality-core" }
causality-lisp = { path = "../causality-lisp" }
causality-simulation = { path = "../causality-simulation" }

# SSZ serialization
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }

# OCaml FFI bindings
ocaml = { version = "1.0", optional = true }
ocaml-derive = { version = "1.0", optional = true }
ocaml-boxroot-sys = { version = "0.4", optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { version = "1.3", optional = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
hex = { workspace = true }
sha2 = { workspace = true }
libc = "0.2"
once_cell = { version = "1.19", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

[features]
default = ["c-ffi"]
c-ffi = []
ocaml-ffi = ["ocaml", "ocaml-derive", "ocaml-boxroot-sys", "bincode", "once_cell", "log", "env_logger"]

[build-dependencies]
cbindgen = "0.24"
bindgen = { version = "0.70", optional = true }

[dev-dependencies]
tempfile = "3.8" 