[package]
name = "causality-ffi"
version = "0.1.0"
edition = "2021"
description = "Unified FFI bindings for C and OCaml integration with Causality framework"

[lib]
name = "causality_ffi"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
causality-core = { path = "../causality-core" }
causality-compiler = { path = "../causality-compiler", optional = true }
causality-runtime = { path = "../causality-runtime", optional = true }
causality-lisp = { path = "../causality-lisp", optional = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
], optional = true }
rand = { workspace = true, optional = true }

# OCaml bindings (optional) - using ocaml-rs
ocaml = { version = "1.2", optional = true }

# Valence integration (optional)
valence-coprocessor = { version = "0.2.3", git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.2.3", default-features = false, optional = true }
valence-coprocessor-client = { git = "https://github.com/timewave-computer/valence-domain-clients", rev = "d26460ceb0f95599300b1521131ef4b078638310", optional = true }

# Almanac integration (optional)
indexer-core = { git = "https://github.com/timewave-computer/almanac.git", optional = true }
indexer-storage = { git = "https://github.com/timewave-computer/almanac.git", optional = true }
indexer-api = { git = "https://github.com/timewave-computer/almanac.git", optional = true }

# Serialization
bincode = { version = "1.3.3", optional = true }

# Utilities
hex = { workspace = true }
sha2 = { workspace = true }
libc = "0.2"
once_cell = { version = "1.19", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

[features]
default = []
c-ffi = ["causality-compiler", "causality-runtime", "bincode", "serde"]
ocaml-ffi = []
async = ["dep:tokio", "causality-compiler"]
valence = [
    "dep:valence-coprocessor",
    "dep:valence-coprocessor-client",
    "async",
    "dep:rand",
]
almanac = [
    "dep:indexer-core",
    "dep:indexer-storage",
    "dep:indexer-api",
    "async",
]
real-integration = ["valence", "almanac"]

[build-dependencies]
cbindgen = "0.24"
bindgen = { version = "0.70", optional = true }

[dev-dependencies]
tempfile = "3.8"
[package.metadata.ocaml]
runtime_path = "/nix/store/rr7nbjw8jsrsl43nhqg0ikih3kzi2apc-ocaml-5.1.1/lib/ocaml"
