[package]
name = "causality-indexer-adapter"
version = "0.1.0"
edition = "2021"
authors = ["Causality Contributors"]
description = "Defines traits and data structures for consuming indexed blockchain data in Causality"
readme = "README.md"
license = "MIT"
repository = "https://github.com/causality/causality"

[dependencies]
# Core type dependencies
causality-types = { path = "../causality-types" }
causality-error = { path = "../causality-error" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async traits
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

[features]
almanac = []
almanac-client = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }