[package]
name = "causality-lisp"
version = "0.1.0"
edition = "2021"
authors = ["Causality Team"]
description = "Causality Lisp language implementation with linear lambda calculus"
license = "MIT OR Apache-2.0"
repository = "https://github.com/timewave/reverse-causality"

[dependencies]
causality-core = { version = "0.1.0", path = "../causality-core" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
criterion = "0.5" 